--- a/MShop/MShop/Views/Shared/_Layout.cshtml
+++ b/MShop/MShop/Views/Shared/_Layout.cshtml
@@ -31,9 +31,18 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+        <div class="row">
+            <div class="row">
+                <div class="col-md-3">
+                    @await Component.InvokeAsync("ProductGroupComponents")
+                </div>
+                <div class="col-md-9">
+                    @RenderBody()
+                </div>
+
+            </div>
+
+        </div>
     </div>
 
     <footer class="border-top footer text-muted">
