--- a/MShop/MShop/Views/Components/ProductGroupsComponent.cshtml
+++ b/MShop/MShop/Views/Components/ProductGroupsComponent.cshtml
@@ -1,12 +1,12 @@
-﻿@model IEnumerable<Category>
+﻿@model IEnumerable<ShowGroupViewModel>
 
 <ul class="list-group">
 
     @foreach (var item in Model)
     {
         <li class="list-group-item d-flex justify-content-between align-items-center">
-            <a href="#">@item.Name</a>
-            <span class="badge badge-primary badge-pill">0</span>
+            <a href="/Group/@item.GroupId/@item.Name">@item.Name</a>
+            <span class="badge badge-primary badge-pill">@item.ProductCount</span>
         </li>
     }
 
