--- a/MShop/MShop/Views/Home/Index.cshtml
+++ b/MShop/MShop/Views/Home/Index.cshtml
@@ -10,15 +10,7 @@
     <div class="row">
         @foreach(var item in Model)
             {
-                <div class="col-4">
-                    <div class="card">
-                        <img class="card-img-top img-thumbnail img-fluid" src="~/Images/@(item.Id).jpeg" />
-                        <div class="card-body text-center">
-                            <h4 class="card-title">@item.Name</h4>
-                            <a asp-action="Details" asp-controller="Home" asp-route-id="@item.Id" >  جزئیات محصول</a>
-                        </div>
-                    </div>
-                </div>
+                <partial name="_BoxProduct" model="@item"/>
             }
     </div>
 </div>
