--- a/MShop/MShop/Views/Shared/_Layout.cshtml
+++ b/MShop/MShop/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ContactUs">ارتباط با ما</a>
                         </li>
+                        <partial name="_Groups"/>
                     </ul>
                 </div>
             </div>
